# ISCIR-FMCW-Robotic-Obstacle-Avoidance

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: roadmap.md
examples/: benchmark_demo.py  cfar_demo.py  corridor_demo.py  end_to_end_navigation_demo.py  fft_navigation_demo.py  million_experiments.py  multi_target_range_demo.py  navigation_pipeline_demo.py  range_doppler_demo.py  range_fft_demo.py  tracking_demo.py
src/iscir/: __init__.py
src/iscir/evaluation/: __init__.py  baseline_runner.py  benchmark.py  massive_experiments.py  navigation_metrics.py  plotting.py  scenarios.py  tracking_metrics.py
src/iscir/navigation/: __init__.py  collision.py  pipeline.py  reactive_controller.py  risk.py
src/iscir/robotics/: controller.py
src/iscir/sensing/: cfar.py  fft_sensor.py  processing.py  range_doppler.py  sensor.py  signal.py
src/iscir/sensing/tracker/: __init__.py  assignment.py  kalman.py  manager.py  track.py
src/iscir/simulation/: models.py
tests/: test_assignment.py  test_benchmark.py  test_cfar.py  test_collision.py  test_core.py  test_fft_sensor.py  test_kalman.py  test_massive_experiments.py  test_navigation_metrics.py  test_navigation_pipeline.py  test_plotting.py  test_processing.py  test_range_doppler.py  test_reactive_controller.py  test_risk.py  test_scenarios.py  test_signal.py  test_track.py  test_tracker_manager.py  test_tracking_metrics.py
