[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "iscir-fmcw-robotics"
version = "0.1.0"
description = "Synthetic FMCW sensing and obstacle avoidance for autonomous mobile robots"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Panagiota Grosdouli"}]
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
